Navigate to `nav_home` on Register Button click.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,4 +29,8 @@
         android:name="com.example.androidproject.ui.settings.SettingsFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_settings" />
+
+    <action
+        android:id="@+id/action_auth_view_to_fragment_home"
+        app:destination="@id/nav_home" />
 </navigation>
