--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
@@ -9,6 +10,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_recycler_view"
+        app:layoutManager="LinearLayoutManager"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
