--- a/app/src/main/res/layout/fragment_favourites_item.xml
+++ b/app/src/main/res/layout/fragment_favourites_item.xml
@@ -28,4 +28,20 @@
         android:textStyle="bold"
         tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/btn_remove"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="25dp"
+        android:background="@color/red"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@android:drawable/ic_delete"
+        android:padding="16dp"
+        android:text="Remove"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
