--- a/app/src/main/res/layout/fragment_game_list_item.xml
+++ b/app/src/main/res/layout/fragment_game_list_item.xml
@@ -18,7 +18,7 @@
         tools:src="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/home_text_view"
+        android:id="@+id/game_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="7dp"
@@ -27,6 +27,23 @@
         android:textSize="25sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/btn_remove"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="25dp"
+        android:background="@color/red"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@android:drawable/ic_delete"
+        android:padding="16dp"
+        android:text="Remove"
+        android:visibility="gone"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_add"
@@ -39,6 +56,7 @@
         android:backgroundTint="@color/white"
         android:drawableLeft="@android:drawable/ic_menu_add"
         android:padding="16dp"
+        android:visibility="gone"
         android:text="Search"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
