--- a/app/src/main/res/layout/fragment_game_list_item.xml
+++ b/app/src/main/res/layout/fragment_game_list_item.xml
@@ -28,37 +28,33 @@
         android:textStyle="bold"
         tools:ignore="MissingConstraints" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_remove"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginBottom="25dp"
-        android:background="@color/red"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@android:drawable/ic_delete"
+        android:background="@drawable/sample_button"
+        android:drawableTop="@android:drawable/ic_delete"
         android:padding="16dp"
-        android:text="Remove"
-        android:visibility="gone"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginBottom="25dp"
-        android:background="@color/gray"
-        android:backgroundTint="@color/white"
-        android:drawableLeft="@android:drawable/ic_menu_add"
+        android:background="@drawable/sample_button"
+        android:drawableTop="@android:drawable/ic_menu_add"
         android:padding="16dp"
-        android:visibility="gone"
-        android:text="Search"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
