Change background of Login/Register buttons and update padding.

--- a/app/src/main/res/layout/fragment_auth_register.xml
+++ b/app/src/main/res/layout/fragment_auth_register.xml
@@ -46,9 +46,10 @@
         android:id="@+id/register_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/btn_green"
+        android:background="@drawable/sample_button"
         android:textColor="@color/white"
         android:layout_gravity="start"
+        android:padding="10dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
