--- a/app/src/main/res/layout/fragment_auth_login.xml
+++ b/app/src/main/res/layout/fragment_auth_login.xml
@@ -16,6 +16,7 @@
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/white"
         android:layout_marginStart="24dp"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="24dp"
@@ -30,6 +31,7 @@
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/white"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
