Fix styling of setting buttons.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,22 +8,23 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/deactivate_btn"
-        android:layout_width="170dp"
+        android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
-        android:background="@color/red"
+        android:background="@drawable/sample_button"
+        android:textColor="@color/white"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="Deactivate Account" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/deactivate_btnm"
-        android:layout_width="170dp"
+        android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
-        android:background="@color/btn_green"
+        android:background="@drawable/sample_button"
         android:textColor="@color/white"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
