Change drawer active icon color.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="@color/quite_black"
+        app:itemShapeFillColor="@color/blurple"
         app:itemTextColor="@color/white"
         app:itemIconTint="@color/white"
         android:layout_gravity="start"
