--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,7 +27,7 @@
     <fragment
         android:id="@+id/nav_settings"
         android:name="com.example.androidproject.ui.settings.SettingsFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/settings"
         tools:layout="@layout/fragment_settings" />
 
     <fragment
