--- a/app/src/main/res/layout/fragment_game_list_item.xml
+++ b/app/src/main/res/layout/fragment_game_list_item.xml
@@ -10,6 +10,7 @@
         android:id="@+id/game_banner"
         android:layout_width="420dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,16 +18,25 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/game_text_view"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="7dp"
-        android:text="Cyberpunk 2077"
-        android:textColor="@color/navy"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        tools:ignore="MissingConstraints" />
+        android:background="@color/blurple"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
+        <TextView
+            android:id="@+id/game_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="7dp"
+            android:text="Cyberpunk 2077"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            tools:ignore="MissingConstraints" />
+
+    </FrameLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_remove"
