--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -9,13 +9,12 @@
 
     <TextView
         android:id="@+id/empty_games_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="@string/empty_games"
         android:textColor="@color/white"
         android:visibility="gone"
-        android:layout_marginTop="300dp"
-        android:layout_marginLeft="100dp"
+        android:gravity="center"
         />
 
     <androidx.recyclerview.widget.RecyclerView
